Docker compose working, fix test