@@ -6,6 +6,9 @@ import com.example.demo.repository.VenueRepository;
 import com.example.demo.repository.EventRepository;
 import com.example.demo.response.EventInventoryResponse;
 import com.example.demo.response.VenueInventoryResponse;
+import com.example.demo.response.VenueResponse;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -13,20 +16,16 @@ import org.springframework.stereotype.Service;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class InventoryService {
 
     private final EventRepository eventRepository;
     private final VenueRepository venueRepository;
 
-    @Autowired
-    public InventoryService(EventRepository eventRespository, VenueRepository venueRepository) {
-        this.eventRepository = eventRespository;
-        this.venueRepository = venueRepository;
-    }
 
 
     public List<EventInventoryResponse> getAllEvents() {
@@ -34,15 +33,22 @@ public class InventoryService {
 
         return events.stream()
                 .map(event -> EventInventoryResponse.builder()
-                .event(event.getName())
-                .capacity(event.getLeftCapacity())
-                .venue(event.getVenue())
-                .build()).collect(Collectors.toList());
+                        .eventId(event.getId())
+                        .event(event.getName())
+                        .capacity(event.getLeftCapacity())
+                        .ticketPrice(event.getTicketPrice())
+                        .venue(VenueResponse.builder()
+                                .id(event.getVenue().getId())
+                                .name(event.getVenue().getName())
+                                .address(event.getVenue().getAddress())
+                                .totalCapacity(event.getVenue().getTotalCapacity())
+                                .build())
+                        .build())
+                .toList();
     }
 
     public VenueInventoryResponse getVenueInformation(final Long venueId) {
-        final Venue venue = venueRepository.findById(venueId).orElse(null);
-
+        final Venue venue = venueRepository.findById(venueId).orElseThrow(() -> new EntityNotFoundException("Venue not found: " + venueId));
         return VenueInventoryResponse.builder()
                 .venueId(venue.getId())
                 .venueName(venue.getName())
@@ -51,19 +57,24 @@ public class InventoryService {
     }
 
     public EventInventoryResponse getEventInventory(final Long eventId) {
-        final Event event = eventRepository.findById(eventId).orElse(null);
+        final Event event = eventRepository.findById(eventId).orElseThrow(() -> new EntityNotFoundException("Event not found: " + eventId));
 
         return EventInventoryResponse.builder()
                 .event(event.getName())
                 .capacity(event.getLeftCapacity())
-                .venue(event.getVenue())
                 .ticketPrice(event.getTicketPrice())
                 .eventId(event.getId())
+                .venue(VenueResponse.builder()
+                        .id(event.getVenue().getId())
+                        .name(event.getVenue().getName())
+                        .address(event.getVenue().getAddress())
+                        .totalCapacity(event.getVenue().getTotalCapacity())
+                        .build())
                 .build();
     }
 
     public void updateEventCapacity(final Long eventId, final Long ticketsBooked) {
-        final Event event = eventRepository.findById(eventId).orElse(null);
+        final Event event = eventRepository.findById(eventId).orElseThrow(() -> new EntityNotFoundException("Event not found: " + eventId));
         event.setLeftCapacity(event.getLeftCapacity() - ticketsBooked);
         eventRepository.saveAndFlush(event);
         log.info("Updated event capacity for event id: {} with tickets booked: {}", eventId, ticketsBooked);
